; ModuleID = '/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_arg_dollar_boot_path.c'
source_filename = "/home/carl/AnghaBench/systemd/src/boot/extr_bootctl.c_arg_dollar_boot_path.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_xbootldr_path = common dso_local global i64 0, align 8
@arg_esp_path = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* ()* @arg_dollar_boot_path to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @arg_dollar_boot_path() #0 {
  %1 = load i64, i64* @arg_xbootldr_path, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %5

3:                                                ; preds = %0
  %4 = inttoptr i64 %1 to i8*
  br label %7

5:                                                ; preds = %0
  %6 = load i8*, i8** @arg_esp_path, align 8
  br label %7

7:                                                ; preds = %5, %3
  %8 = phi i8* [ %4, %3 ], [ %6, %5 ]
  ret i8* %8
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
